k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockflow-service
  namespace: stockflow
  labels:
    app: stockflow
spec:
  selector:
    app: stockflow
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - name: metrics
      port: 9113
      targetPort: 9113
      protocol: TCP
  type: NodePort
